Finished Proyect Final Maquetacion Web

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mik Cudi</title>
   <!-- Main CSS -->
-  <link rel="stylesheet" href="/main.css">
+  <link rel="stylesheet" href="main.css">
   <!-- Boxicons -->
   <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
   <!-- Remixicon -->
@@ -56,7 +56,7 @@ servicios como desarrollador frontend.%0D%0A%0D%0AGracias," target="_blank">
       </a>
     </div>
     <div class="hero-img">
-      <img src="/assets/imgs/Mik Cudi PixelArt.png" alt="mik cudi logo">
+      <img src="assets/imgs/Mik Cudi PixelArt.png" alt="mik cudi logo">
     </div>
   </section>
 
